--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ rsa==4.8
 schedule==1.1.0
 six==1.16.0
 slack-sdk==3.17.2
+slackclient==2.5.0
 SQLAlchemy==1.4.39
 urllib3==1.26.9
 Werkzeug==2.1.2
